# CodeWhale

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PR_3273_SCOPE_DISCIPLINE.md  README.ja-JP.md  README.md  README.vi.md  README.zh-CN.md  SECURITY.md  config.example.toml  package-lock.json  package.json
.codewhale/: constitution.json
.github/: AUTHOR_MAP
.github/workflows/: approve-contributor.yml  ci.yml  nightly.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: harness.rs  lib.rs  provider.rs  tests.rs
crates/config/src/route/: conformance_tests.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/protocol/src/: fleet.rs  lib.rs
crates/release/src/: lib.rs
crates/state/tests/: parity_state.rs
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/locales/: en.json  es-419.json  ja.json  pt-BR.json  vi.json  zh-Hans.json  zh-Hant.json
crates/tui/src/: client.rs  config.rs  config_persistence.rs  config_ui.rs  context_report.rs  cost_status.rs  hooks.rs  localization.rs  main.rs  mcp.rs  mcp_server.rs  oauth.rs  project_context.rs  prompts.rs  runtime_api.rs  runtime_log.rs  runtime_threads.rs  session_diagnostics.rs  session_manager.rs  settings.rs  working_set.rs
crates/tui/src/client/: chat.rs  responses.rs
crates/tui/src/commands/: goal.rs  mod.rs  session.rs
crates/tui/src/commands/groups/config/: config.rs
crates/tui/src/commands/groups/core/: core.rs  feedback.rs  hotbar.rs  mod.rs
crates/tui/src/config/: tests.rs
crates/tui/src/core/: engine.rs  ops.rs
crates/tui/src/core/engine/: handle.rs  tests.rs  tool_catalog.rs  tool_execution.rs  tool_setup.rs  turn_loop.rs
crates/tui/src/fleet/: alerts.rs  host.rs  manager.rs  scheduler.rs
crates/tui/src/prompts/: base.md  base.txt  constitution.md
crates/tui/src/prompts/modes/: agent.md
crates/tui/src/remote_setup/: bundle.rs  mod.rs  registry.rs
crates/tui/src/runtime_api/: tests.rs
crates/tui/src/runtime_threads/: tests.rs
crates/tui/src/tools/: review.rs  search.rs
crates/tui/src/tools/subagent/: mod.rs  tests.rs
crates/tui/src/tui/: app.rs  approval.rs  auto_review.rs  command_palette.rs  context_inspector.rs  footer_ui.rs  history.rs  key_shortcuts.rs  keybindings.rs  model_picker.rs  provider_picker.rs  session_picker.rs  sidebar.rs  ui.rs  whale_routes.rs
crates/tui/src/tui/app/: tests.rs
crates/tui/src/tui/history/: tool_run.rs
crates/tui/src/tui/hotbar/: actions.rs  mod.rs  setup.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/views/: fleet_setup.rs  mod.rs  mode_picker.rs
crates/tui/src/tui/widgets/: footer.rs  header.rs  key_hint.rs  mod.rs  pending_input_preview.rs
crates/tui/tests/: palette_audit.rs
crates/whaleflow/src/: lib.rs
docs/: CONFIGURATION.md  CONTRIBUTORS.md  FLEET.md  GUIDE.md  INSTALL.md  KEYBINDINGS.md  PROMPT_MODE_MATRIX.md  RECEIPTS.md  RUNTIME_API.md  SUBAGENTS.md  V0866_RELEASE_LEDGER.md
docs/evidence/: hotbar-qa-matrix.md  terminal-visual-regression-matrix.md
docs/skills/: README.md
docs/skills/codew-release-qa-sweep/: SKILL.md
docs/skills/gh-assign-issues/: SKILL.md
docs/skills/gh-close-issues/: SKILL.md
docs/skills/gh-compile-issues/: SKILL.md
docs/skills/gh-credit-harvest/: SKILL.md
docs/skills/gh-file-issue/: SKILL.md
docs/skills/gh-find-prs/: SKILL.md
docs/skills/gh-plan-issues/: SKILL.md
docs/skills/gh-treasure-hunt/: SKILL.md
integrations/bridge-core/: package.json
integrations/bridge-core/src/: lib.mjs
integrations/bridge-core/test/: lib.test.mjs
integrations/feishu-bridge/: .env.example
integrations/feishu-bridge/scripts/: validate-config.mjs
integrations/feishu-bridge/src/: index.mjs  lib.mjs
integrations/telegram-bridge/src/: index.mjs  lib.mjs
integrations/telegram-bridge/test/: lib.test.mjs
integrations/wecom-bridge/src/: lib.mjs
integrations/wecom-bridge/test/: lib.test.mjs
integrations/weixin-bridge/src/: index.mjs  lib.mjs
integrations/weixin-bridge/test/: lib.test.mjs
npm/codewhale/: package.json
npm/deepseek-tui/: package.json
scripts/: check-provider-registry.py
scripts/release/: app-server-smoke.sh  app-server-smoke.test.sh  check-versions.sh  crates.sh  publish-crates.sh
web/: package-lock.json  package.json  worker.ts
web/lib/: facts.generated.ts  static-installer.test.ts  static-installer.ts
