[package]
name = "codewhale-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style app-server transport for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.60" }
codewhale-config = { path = "../config", version = "0.8.60" }
codewhale-core = { path = "../core", version = "0.8.60" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.60" }
codewhale-hooks = { path = "../hooks", version = "0.8.60" }
codewhale-mcp = { path = "../mcp", version = "0.8.60" }
codewhale-protocol = { path = "../protocol", version = "0.8.60" }
codewhale-state = { path = "../state", version = "0.8.60" }
codewhale-tools = { path = "../tools", version = "0.8.60" }
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.27"
tower = "0.5"
