[package]
name = "codewhale-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agentic terminal facade for open-source and open-weight coding models"

[[bin]]
name = "codewhale"
path = "src/main.rs"

# Short-form convenience alias — forwards to `codewhale` silently.
[[bin]]
name = "codew"
path = "src/bin/codew_legacy_shim.rs"

# Legacy alias — forwards to `codewhale` and prints a deprecation notice.
# Will be removed in v0.9.0.
[[bin]]
name = "deepseek"
path = "src/bin/deepseek_legacy_shim.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.49" }
codewhale-app-server = { path = "../app-server", version = "0.8.49" }
codewhale-config = { path = "../config", version = "0.8.49" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.49" }
codewhale-mcp = { path = "../mcp", version = "0.8.49" }
codewhale-release = { path = "../release", version = "0.8.49" }
codewhale-secrets = { path = "../secrets", version = "0.8.49" }
codewhale-state = { path = "../state", version = "0.8.49" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
semver.workspace = true
tokio.workspace = true
sha2.workspace = true
tempfile = "3.16"
tracing.workspace = true

[dev-dependencies]
