[package]
name = "codewhale-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agentic terminal facade for open-source and open-weight coding models"

[[bin]]
name = "codewhale"
path = "src/main.rs"

# Short-form convenience alias — forwards to `codewhale` silently.
[[bin]]
name = "codew"
path = "src/bin/codew_legacy_shim.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.60" }
codewhale-app-server = { path = "../app-server", version = "0.8.60" }
codewhale-config = { path = "../config", version = "0.8.60" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.60" }
codewhale-mcp = { path = "../mcp", version = "0.8.60" }
codewhale-release = { path = "../release", version = "0.8.60" }
codewhale-secrets = { path = "../secrets", version = "0.8.60" }
codewhale-state = { path = "../state", version = "0.8.60" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rustls.workspace = true
semver.workspace = true
tokio.workspace = true
sha2.workspace = true
tempfile = "3.27"
tracing.workspace = true

[dev-dependencies]
